packages/ipp/src/ImagProc/Ipp/ptr_adapt.h

int ippiCopy_32f_C1MRx(float*, int, float*, int, void*, unsigned char*, int);
int ippiSet_8u_C1Rx(unsigned char, unsigned char*, int, void*);
int ippiSet_8u_C3Rx(unsigned char*, unsigned char*, int, void*);
int ippiSet_32f_C1Rx(float, float*, int, void*);
int ippiImageJaehne_32f_C1Rx(float*, int, void*);
int ippiScale_8u32f_C1Rx(unsigned char*, int, float*, int, void*, float, float);
int ippiScale_32f8u_C1Rx(float*, int, unsigned char*, int, void*, float, float);
int ippiMaxIndx_8u_C1Rx(unsigned char*, int, void*, unsigned char*, int*, int*);
int ippiMaxIndx_32f_C1Rx(float*, int, void*, float*, int*, int*);
int ippiMinMax_32f_C1Rx(float*, int, void*, float*, float*);
int ippiMaxEvery_8u_C1IRx(unsigned char*, int, unsigned char*, int, void*);
int ippiMinEvery_8u_C1IRx(unsigned char*, int, unsigned char*, int, void*);
int ippiMaxEvery_32f_C1IRx(float*, int, float*, int, void*);
int ippiMinEvery_32f_C1IRx(float*, int, float*, int, void*);
int ippiAnd_8u_C1Rx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*);
int ippiOr_8u_C1Rx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*);
int ippiXor_8u_C1Rx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*);
int ippiNot_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiCompare_8u_C1Rx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*, int);
int ippiCompareC_8u_C1Rx(unsigned char*, int, unsigned char, unsigned char*, int, void*, int);
int ippiErode3x3_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiDilate3x3_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiRGBToYCbCr422_8u_C3C2Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiYCbCr422ToRGB_8u_C2C3Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiRGBToYUV420_8u_C3P3Rx(unsigned char*, int, void**, int*, void*);
int ippiYUV420ToRGB_8u_P3C3Rx(void**, int*, unsigned char*, int, void*);
int ippiYUV420ToRGB_8u_P3Rx(void**, int*, void**, int, void*);
int ippiRGBToGray_8u_C3C1Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiRGBToHSV_8u_C3Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiHSVToRGB_8u_C3Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiColorTwist32f_8u_C3Rx(unsigned char*, int, unsigned char*, int, void*, float*);
int ippiSampleLine_8u_C1Rx(unsigned char*, int, void*, unsigned char*, void*, void*);
int ippiSampleLine_32f_C1Rx(float*, int, void*, float*, void*, void*);
int ippiAbsDiff_8u_C1Rx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*);
int ippiAbsDiff_32f_C1Rx(float*, int, float*, int, float*, int, void*);