packages/ipp/src/ImagProc/Ipp/Adapt.hs


foreign import ccall "ippiCopy_32f_C1MRx"
    ippiCopy_32f_C1MRx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Word8 -> Int -> IO CInt
ippiCopy_32f_C1MR pSrc srcStep pDst dstStep roiSize pMask maskStep = do
    proiSize <- new roiSize
    r <- ippiCopy_32f_C1MRx pSrc srcStep pDst dstStep proiSize pMask maskStep
    free proiSize
    return r

foreign import ccall "ippiSet_8u_C1Rx"
    ippiSet_8u_C1Rx :: Word8 -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiSet_8u_C1R value pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiSet_8u_C1Rx value pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiSet_8u_C3Rx"
    ippiSet_8u_C3Rx :: Ptr Word8 -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiSet_8u_C3R value pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiSet_8u_C3Rx value pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiSet_32f_C1Rx"
    ippiSet_32f_C1Rx :: Float -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiSet_32f_C1R value pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiSet_32f_C1Rx value pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiImageJaehne_32f_C1Rx"
    ippiImageJaehne_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiImageJaehne_32f_C1R pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiImageJaehne_32f_C1Rx pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiScale_8u32f_C1Rx"
    ippiScale_8u32f_C1Rx :: Ptr Word8 -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Float -> Float -> IO CInt
ippiScale_8u32f_C1R pSrc srcStep pDst dstStep roiSize vMin vMax = do
    proiSize <- new roiSize
    r <- ippiScale_8u32f_C1Rx pSrc srcStep pDst dstStep proiSize vMin vMax
    free proiSize
    return r

foreign import ccall "ippiScale_32f8u_C1Rx"
    ippiScale_32f8u_C1Rx :: Ptr Float -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Float -> Float -> IO CInt
ippiScale_32f8u_C1R pSrc srcStep pDst dstStep roiSize vMin vMax = do
    proiSize <- new roiSize
    r <- ippiScale_32f8u_C1Rx pSrc srcStep pDst dstStep proiSize vMin vMax
    free proiSize
    return r

foreign import ccall "ippiMaxIndx_8u_C1Rx"
    ippiMaxIndx_8u_C1Rx :: Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Word8 -> Ptr CInt -> Ptr CInt -> IO CInt
ippiMaxIndx_8u_C1R pSrc srcStep roiSize pMax pIndexX pIndexY = do
    proiSize <- new roiSize
    r <- ippiMaxIndx_8u_C1Rx pSrc srcStep proiSize pMax pIndexX pIndexY
    free proiSize
    return r

foreign import ccall "ippiMaxIndx_32f_C1Rx"
    ippiMaxIndx_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Ptr CInt -> Ptr CInt -> IO CInt
ippiMaxIndx_32f_C1R pSrc srcStep roiSize pMax pIndexX pIndexY = do
    proiSize <- new roiSize
    r <- ippiMaxIndx_32f_C1Rx pSrc srcStep proiSize pMax pIndexX pIndexY
    free proiSize
    return r

foreign import ccall "ippiMinMax_32f_C1Rx"
    ippiMinMax_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Ptr Float -> IO CInt
ippiMinMax_32f_C1R pSrc srcStep roiSize pMin pMax = do
    proiSize <- new roiSize
    r <- ippiMinMax_32f_C1Rx pSrc srcStep proiSize pMin pMax
    free proiSize
    return r

foreign import ccall "ippiMaxEvery_8u_C1IRx"
    ippiMaxEvery_8u_C1IRx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiMaxEvery_8u_C1IR pSrc srcStep pSrcDst srcdstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMaxEvery_8u_C1IRx pSrc srcStep pSrcDst srcdstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiMinEvery_8u_C1IRx"
    ippiMinEvery_8u_C1IRx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiMinEvery_8u_C1IR pSrc srcStep pSrcDst srcdstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMinEvery_8u_C1IRx pSrc srcStep pSrcDst srcdstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiMaxEvery_32f_C1IRx"
    ippiMaxEvery_32f_C1IRx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiMaxEvery_32f_C1IR pSrc srcStep pSrcDst srcdstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMaxEvery_32f_C1IRx pSrc srcStep pSrcDst srcdstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiMinEvery_32f_C1IRx"
    ippiMinEvery_32f_C1IRx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiMinEvery_32f_C1IR pSrc srcStep pSrcDst srcdstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMinEvery_32f_C1IRx pSrc srcStep pSrcDst srcdstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiAnd_8u_C1Rx"
    ippiAnd_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiAnd_8u_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiAnd_8u_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiOr_8u_C1Rx"
    ippiOr_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiOr_8u_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiOr_8u_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiXor_8u_C1Rx"
    ippiXor_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiXor_8u_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiXor_8u_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiNot_8u_C1Rx"
    ippiNot_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiNot_8u_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiNot_8u_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiCompare_8u_C1Rx"
    ippiCompare_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> CInt -> IO CInt
ippiCompare_8u_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize ippCmpOp = do
    proiSize <- new roiSize
    r <- ippiCompare_8u_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize ippCmpOp
    free proiSize
    return r

foreign import ccall "ippiCompareC_8u_C1Rx"
    ippiCompareC_8u_C1Rx :: Ptr Word8 -> Int -> Word8 -> Ptr Word8 -> Int -> Ptr IppiSize -> CInt -> IO CInt
ippiCompareC_8u_C1R pSrc srcStep value pDst dstStep roiSize ippCmpOp = do
    proiSize <- new roiSize
    r <- ippiCompareC_8u_C1Rx pSrc srcStep value pDst dstStep proiSize ippCmpOp
    free proiSize
    return r

foreign import ccall "ippiErode3x3_8u_C1Rx"
    ippiErode3x3_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiErode3x3_8u_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiErode3x3_8u_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiDilate3x3_8u_C1Rx"
    ippiDilate3x3_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiDilate3x3_8u_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiDilate3x3_8u_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiRGBToYCbCr422_8u_C3C2Rx"
    ippiRGBToYCbCr422_8u_C3C2Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiRGBToYCbCr422_8u_C3C2R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiRGBToYCbCr422_8u_C3C2Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiYCbCr422ToRGB_8u_C2C3Rx"
    ippiYCbCr422ToRGB_8u_C2C3Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiYCbCr422ToRGB_8u_C2C3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiYCbCr422ToRGB_8u_C2C3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiRGBToYUV420_8u_C3P3Rx"
    ippiRGBToYUV420_8u_C3P3Rx :: Ptr Word8 -> Int -> Ptr () -> Ptr CInt -> Ptr IppiSize -> IO CInt
ippiRGBToYUV420_8u_C3P3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiRGBToYUV420_8u_C3P3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiYUV420ToRGB_8u_P3C3Rx"
    ippiYUV420ToRGB_8u_P3C3Rx :: Ptr () -> Ptr CInt -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiYUV420ToRGB_8u_P3C3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiYUV420ToRGB_8u_P3C3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiYUV420ToRGB_8u_P3Rx"
    ippiYUV420ToRGB_8u_P3Rx :: Ptr () -> Ptr CInt -> Ptr () -> Int -> Ptr IppiSize -> IO CInt
ippiYUV420ToRGB_8u_P3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiYUV420ToRGB_8u_P3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiRGBToGray_8u_C3C1Rx"
    ippiRGBToGray_8u_C3C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiRGBToGray_8u_C3C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiRGBToGray_8u_C3C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiRGBToHSV_8u_C3Rx"
    ippiRGBToHSV_8u_C3Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiRGBToHSV_8u_C3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiRGBToHSV_8u_C3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiHSVToRGB_8u_C3Rx"
    ippiHSVToRGB_8u_C3Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiHSVToRGB_8u_C3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiHSVToRGB_8u_C3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiColorTwist32f_8u_C3Rx"
    ippiColorTwist32f_8u_C3Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Float -> IO CInt
ippiColorTwist32f_8u_C3R pSrc srcStep pDst dstStep roiSize twist = do
    proiSize <- new roiSize
    r <- ippiColorTwist32f_8u_C3Rx pSrc srcStep pDst dstStep proiSize twist
    free proiSize
    return r

foreign import ccall "ippiSampleLine_8u_C1Rx"
    ippiSampleLine_8u_C1Rx :: Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Word8 -> Ptr IppiPoint -> Ptr IppiPoint -> IO CInt
ippiSampleLine_8u_C1R pSrc srcStep roiSize pDst pt1 pt2 = do
    proiSize <- new roiSize
    ppt1 <- new pt1
    ppt2 <- new pt2
    r <- ippiSampleLine_8u_C1Rx pSrc srcStep proiSize pDst ppt1 ppt2
    free proiSize
    free ppt1
    free ppt2
    return r

foreign import ccall "ippiSampleLine_32f_C1Rx"
    ippiSampleLine_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Ptr IppiPoint -> Ptr IppiPoint -> IO CInt
ippiSampleLine_32f_C1R pSrc srcStep roiSize pDst pt1 pt2 = do
    proiSize <- new roiSize
    ppt1 <- new pt1
    ppt2 <- new pt2
    r <- ippiSampleLine_32f_C1Rx pSrc srcStep proiSize pDst ppt1 ppt2
    free proiSize
    free ppt1
    free ppt2
    return r

foreign import ccall "ippiAbsDiff_8u_C1Rx"
    ippiAbsDiff_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> IO CInt
ippiAbsDiff_8u_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiAbsDiff_8u_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiAbsDiff_32f_C1Rx"
    ippiAbsDiff_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiAbsDiff_32f_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiAbsDiff_32f_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r
